# fraud-chaos-lab

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  cli.py  config.py  main.py  metrics.py  models.py
app/api/: __init__.py  chaos.py  health.py
app/chaos/: __init__.py  engine.py  scenarios.py
app/providers/: __init__.py  client.py
app/synthetic/: __init__.py  identity.py
docs/: openapi.yaml
tests/: test_api.py  test_engine.py  test_synthetic.py
