[project]
name = "fraud-chaos-lab"
version = "0.1.0"
description = "A resilience/chaos engine that simulates high-velocity fraud storms against your own infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Igli Hoxha" }]
keywords = ["chaos-engineering", "fraud", "load-testing", "resilience", "fastapi"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiohttp>=3.9",
    "faker>=24.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "pyyaml>=6.0",
]

[project.scripts]
fraud-chaos-lab = "app.cli:main"

[project.urls]
Homepage = "https://github.com/IgliHoxha/fraud-chaos-lab"
Repository = "https://github.com/IgliHoxha/fraud-chaos-lab"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
